package domain.withdraw.application

case class WithdrawApplicationDateTime(value: String)
