package domain.withdraw.confirmation

import domain.core.user.UserId

case class WithdrawalConfirmApplication(id: UserId)
